added hyperlink to glossary

--- a/vignettes/articles/glossary.Rmd
+++ b/vignettes/articles/glossary.Rmd
@@ -14,12 +14,12 @@ knitr::opts_chunk$set(
 invisible(Sys.setlocale(locale = "en_EN.UTF-8"))
 ```
 
-This document containes the complete list of statistics that are covered by this
+This document contains the complete list of statistics that are covered by this
 package with corresponding functions.
 
 # Players
 
-## `getPlayerStats`
+## <code><a href="../reference/getPlayerStats.html">getPlayerStats</a></code>
 
 | **Column name** | **Column extended name**  |
 | --------------- | ------------------------- |
@@ -48,7 +48,7 @@ package with corresponding functions.
 | FD              | Personal fouls drawn      |
 | PIR             | Performance Index Rating  |
 
-## `getPlayerPoints`
+## <code><a href="../reference/getPlayerPoints.html">getPlayerPoints</a></code>
 
 | **Column name** | **Column extended name**        | **Column description**                                    |
 | --------------- | ------------------------------- | --------------------------------------------------------- |
@@ -64,7 +64,7 @@ package with corresponding functions.
 | %3P             | % of points from three-pointers | % of points from three-point shots made                   |
 | %FT             | % of points from free throws    | % of points from free throws made                         |
 
-## `getPlayergetPlayerAdvanced`
+## <code><a href="../reference/getPlayergetPlayerAdvanced.html">getPlayergetPlayerAdvanced</a></code>
 
 | **Column name** | **Column extended name**  | **Column description**                                                |
 | --------------- | ------------------------- | --------------------------------------------------------------------- |
@@ -80,7 +80,7 @@ package with corresponding functions.
 | 3PTA-R          | Three-point attempts ratio| Estimated % of three-point attempts per player's offensive possessions|
 | FT-RT           | Free Throw rate           | Measure of free throw attempts vs. field goal attempts                |
 
-## `getPlayerMisc`
+## <code><a href="../reference/getPlayerMisc.html">getPlayerMisc</a></code>
 
 | **Column name** | **Column extended name** | **Column description**                                                                  |
 | --------------- | ------------------------ | --------------------------------------------------------------------------------------- |
@@ -89,7 +89,7 @@ package with corresponding functions.
 
 # Team
 
-## `getPlayerStats` and `getPlayerLeadStats`
+## <code><a href="../reference/getPlayerStats.html">getPlayerStats</a></code> and <code><a href="../reference/getPlayerLeadStats.html">getPlayerLeadStats</a></code>
 
 | **Column name** | **Column extended name**  |
 | --------------- | ------------------------- |
@@ -120,7 +120,7 @@ package with corresponding functions.
 
 # Game
 
-## `getGamePlayByPlay`
+## <code><a href="../reference/getGamePlayByPlay.html">getGamePlayByPlay</a></code>
 
 | **PlayType** | **PlayInfo**              |
 | ------------ | ------------------------- |
