--- a/vignettes/articles/team-stats-radar.Rmd
+++ b/vignettes/articles/team-stats-radar.Rmd
@@ -65,7 +65,7 @@ showtext_auto()
 
 ```{r data}
 CompetitionRounds <- getCompetitionRounds("E2023") %>%
-  filter(MinGameStartDate <= Sys.Date()) %>%
+  filter(MaxGameStartDate <= Sys.Date()) %>%
   slice_head(n = 1)
 
 MaxRound <- max(CompetitionRounds$Round)
