--- a/vignettes/articles/team-stats-radar.Rmd
+++ b/vignettes/articles/team-stats-radar.Rmd
@@ -64,7 +64,7 @@ showtext_auto()
 
 ```{r data}
 CompetitionRounds <- getCompetitionRounds("E2023") %>%
-  filter(MinGameStartDate <= Sys.Date()) %>%
+  filter(Sys.Date() >= MaxGameStartDate) %>%
   slice_head(n = 1)
 
 MaxRound <- max(CompetitionRounds$Round)
